...
 */
object HuntScreenTestTags {

  // -------------------
  // Input fields
  // -------------------
  const val INPUT_HUNT_TITLE = "inputHuntTitle"
  const val INPUT_HUNT_DESCRIPTION = "inputHuntDescription"
  const val INPUT_HUNT_TIME = "inputHuntTime"
  const val INPUT_HUNT_DISTANCE = "inputHuntDistance"

  // -------------------
  // Dropdowns
  // -------------------
  const val DROPDOWN_STATUS = "dropdownStatus"
  const val DROPDOWN_DIFFICULTY = "dropdownDifficulty"

  // -------------------
  // Buttons
  // -------------------
  const val BUTTON_SELECT_LOCATION = "buttonSelectLocation"
  const val HUNT_SAVE = "huntSave"

  // -------------------
  // Messages
  // -------------------
  const val ERROR_MESSAGE = "errorMessage"

  // -------------------
  // Screens
  // -------------------
  const val ADD_HUNT_SCREEN = "AddHuntScreen"
  const val COLLUMN_HUNT_FIELDS = "ColumnHuntFields"
  const val BUTTON_DELETE_HUNT = "buttonDeleteHunt"
}

