...
  const val CANCEL = "Cancel"

  // -------------------
  // Buttons
  // -------------------
  const val VIEW_HUNT = "View Hunt"
  const val PROGRESS = "Progress: "
  const val START_HUNT = "Start Hunt"
  const val VALIDATE = "Validate"
  const val FINISH_HUNT = "Finish hunt"
  const val STOP_HUNT = "Stop hunt"

  // -------------------
  // Stop hunt confirmation
  // -------------------
...
  const val BUTTON_CANCEL = "huntPopupCancel"
  const val BUTTON_VIEW = "huntPopupView"
  const val BUTTON_BACK = "backToAllHunts"
  const val PERMISSION_POPUP = "permissionPopup"
  const val GRANT_LOCATION_PERMISSION = "grantLocationPermission"
  const val EXPLAIN = "explain"
  const val START = "start"
  const val PROGRESS = "progress"
  const val VALIDATE = "validate"
  const val FINISH = "finish"
  const val STOP_POPUP = "stopPopup"
  const val CONFIRM = "confirm"
  const val NEXT_CHECKPOINT_IMAGE = "nextCheckpointImage"
  const val CLOSE_CHECKPOINT_IMAGE = "closeCheckpointImage"
}

